--- a/index.html
+++ b/index.html
@@ -1,153 +1,270 @@
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&family=Rozha+One&display=swap"
-        rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/js/splide.min.js">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
+  <title>Bárbara Afonso</title>
 
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>barbara</title>
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
+    rel="stylesheet">
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/resume.min.css" rel="stylesheet">
+
 </head>
 
-<body>
+<body id="page-top">
 
-    <header>
-        <a href="#"><img src="./imgs/logo.svg" alt="logo"></a>
-        <ul class="menu">
-            <li><a href="#sobre">sobre</a> </li>
-            <li><a href="#projetos">projetos</a> </li>
-            <li><a href="#contato">contato</a> </li>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Start Bootstrap</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/me.jpeg" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#awards">Projects</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
+      <div class="my-auto">
+        <h1 class="mb-0">Bárbara
+          <span class="text-primary">Afonso</span>
+        </h1>
+        <div class="subheading mb-5">Montes Claros, MG · +55 (38) 98845-6295 ·
+          <a href="aafonsobarbara@gmail.com">aafonsobarbara@gmail.com</a>
+        </div>
+        <p class="mb-5">I'm a Front-end Developer and UI Designer with experience in creating websites for over a
+          year.<br> I can create multiple websites in different styles using different tools and languages. I'm familiar
+          with Bootstrap and Scss and I'm constantly studying Javascript. In addition to creating websites, I can easily
+          create some modern design, respecting the users usability and the customers request.
+          <br> Even though I have knowledge in the area, I worked on it only as a freelancer. In my work experiences, I
+          developed group work skills, in addition to improving my teaching skills in relation to the projects I did.
+          From that, I can say that I am fully capable of:
+          <br> - work in a group,
+          <br>- develop using methodologies like Scrum or similar,
+          <br>- deal with the pressure of work and / or the demands of clients (I work very well under pressure, by the
+          way).
+        </p>
+        <ul class="list-inline list-social-icons mb-0">
+
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/barbara-afonso/">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/aafonsobarbara">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
         </ul>
-    </header>
+      </div>
+    </section>
 
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <div class="my-auto">
+        <h2 class="mb-5">Experience</h2>
 
-
-    <section class="main">
-        <div class="main-title">
-            <h1>front-end & desenvolvimento web</h1>
-            <h2>seu site <span>do seu jeito</span></h2>
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Network Assistent</h3>
+            <div class="subheading mb-3">Montes Claros City Hall </div>
+            <p>As a network assistant, I was responsible for the entire network and server maintenance process, in
+              addition to having daily contact with network users. I worked with some languages like Javascript and Java
+              and MongoDB as database.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">10/2018 - 02/2020</span>
+          </div>
         </div>
-        <div class="main-content">
-            <div class="boxes">
-                <h3>olá, eu sou a barbara</h3>
-                <p>sou desenvolvedora web especializada em front-end e UI design. crio sites institucionais modernos
-                    sempre
-                    respeitando o gosto do cliente.</p>
-                <div>
-                    <h3>onde me encontrar</h3>
-                    <ul>
-                        <li><a href="https://github.com/aafonsobarbara" target="_blank"> github <img
-                                    src="./imgs/seta.svg"></a></li>
-                        <li><a href="https://www.linkedin.com/in/barbara-afonso/" target="_blank"> linkedin <img
-                                    src="./imgs/seta.svg"></a></li>
-                        <li><a href="https://dribbble.com/babilsa" target="_blank"> dribbble <img
-                                    src="./imgs/seta.svg"></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="orcamento">
-                <div>
-                    <h4>peça seu orçamento</h4>
-                    <p>estou disponível em
-                        <span>aafonsobarbara@gmail.com</span>
-                        <br>(38) 98845-6295
-                    </p>
-                    <a class="btn" href="./doc/Barbara-Curriculo.pdf" download>baixe meu currículo</a>
-                    <a class="btn" href="#contato">contate-me</a>
-                </div>
-            </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Instructor</h3>
+            <div class="subheading mb-3">Happy Code</div>
+            <p>Happy Code's a startup that welcomed me and made me develop my teaching skills in everything I program.
+              As I worked with children, I taught Javascript applied in different ways, including microcontrollers. In
+              addition, I had a lot of contact with the development of 2D and 3D games, using software such as Unity.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">03/2020 - 07/2020</span>
+          </div>
         </div>
+
+      </div>
+
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <div class="my-auto">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">UNIFIPMOC</h3>
+            <div class="subheading mb-3">Computer Engineering</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018 - 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Microlins</h3>
+            <div class="subheading mb-3">Technical course in Web Design</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2016</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
+      <div class="my-auto">
+        <h2 class="mb-5">Skills</h2>
+
+        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <ul class="list-inline list-icons">
+          <li class="list-inline-item">
+            <i class="devicons devicons-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-css3"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-javascript"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-jquery"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-sass"></i>
+          </li>
+
+          <li class="list-inline-item">
+            <i class="devicons devicons-bootstrap"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="devicons devicons-wordpress"></i>
+          </li>
+
+
+
+        </ul>
+
+        <div class="subheading mb-3">More about me</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            My speaking, writing and listening in English are great
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            I can also read and listen in Spanish a little
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            I have some designs in <a target=“_blank” href="https://dribbble.com/babilsa">Dribbble</a>
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            I would love to learn new languages
+          </li>
+        </ul>
+      </div>
     </section>
 
 
-    <section class="bloco" id="sobre">
-        <h1 class="divider">sobre<span>.</span></h1>
-        <div class="sobre-content">
-            <p>sou estudante de engenharia da computação e aspirante a designer desde criança. ao longo da faculdade
-                desenvolvi minha paixão por front-end e hoje, após diversos cursos e experiências, desenvolver se tornou
-                meu
-                hobby favorito.
-                como parte do meu crescimento pessoal, estou sempre aberta a dicas e críticas. </p>
-            <div>
-                <img src="./imgs/Vector.svg" alt="JavaScript">
-                <img src="./imgs/Group.svg" alt="Bootstrap">
-                <img src="./imgs/Vector-1.svg" alt="Sass">
-            </div>
-        </div>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+      <div class="my-auto">
+        <h2 class="mb-5">Projects</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Oz Baianos · <a target=“_blank” href="https://github.com/aafonsobarbara/Oz-Baianos">Github</a> · <a
+              target=“_blank” href="https://ozbaianos.netlify.app/">Live Project</a>
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Covid for Kids · <a target=“_blank”
+              href="https://github.com/aafonsobarbara/Covid-For-Kids-Website">Github</a> · <a target=“_blank”
+              href="https://corona-info-kids.netlify.app/">Live Project</a>
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Portfolio · <a target=“_blank” href="">Github</a> · <a target=“_blank” href="">Live Project</a>
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Animais Fantasticos · <a target=“_blank”
+              href="https://github.com/aafonsobarbara/Animais-Fantasticos">Github</a> · <a target=“_blank”
+              href="https://animaisfantasticosss.netlify.app/">Live Project</a>
+          </li>
+
+        </ul>
+      </div>
     </section>
 
-    <section class="bloco" id="projetos">
+  </div>
 
-        <h1 class="divider">projetos<span>.</span></h1>
-        <div class="splide">
-            <div class="splide__track">
-                <ul class="splide__list">
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <img src="./imgs/telaozbaianos.png" alt="">
-                        </div>
-                        <div class="descricao">
-                            <h1>oz baianos</h1>
-                            <h2>HTML5 - CSS3 - JS</h2>
-                            <a class="btn btn2" href="">site</a>
-                            <a class="btn btn2" href="https://github.com/aafonsobarbara/Oz-Baianos">código</a>
-                        </div>
-                    </li>
-                    <li class="splide__slide">
-                        <div class="splide__slide__container">
-                            <img src="./imgs/telacovid.png" alt="">
-                        </div>
-                        <div class="descricao">
-                            <h1>covid for kids</h1>
-                            <h2>HTML5 - CSS3 - JS</h2>
-                            <a class="btn btn2" href="">site</a>
-                            <a class="btn btn2"
-                                href="https://github.com/aafonsobarbara/Covid-For-Kids-Website">código</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-    <section class="bloco" id="contato">
-        <h1 class="divider">contato<span>.</span></h1>
-        <div class="contato-content">
-            <h2>Peça um orçamento</h2>
-            <form method="POST">
-                <label for="name">Nome</label>
-                <input type="text" name="name">
-                <label for="email">E-mail</label>
-                <input type="email" id="email">
-                <label for="msg">Conte-me sobre o projeto</label>
-                <textarea name="msg" id="msg"></textarea>
-                <button class="btn btn2 button" type="submit">enviar</button>
-            </form>
-        </div>
-    </section>
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
 
-
-    <footer>
-        <p>Todos os direitos reservados.</p>
-        <p>aafonsobarbara@gmail.com</p>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            new Splide('.splide').mount();
-        });
-    </script>
 </body>
 
 </html>
