--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Start Bootstrap</span>
+      <span class="d-block d-lg-none">Bárbara Afonso</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/me.jpeg" alt="">
       </span>
@@ -240,7 +240,8 @@
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Portfolio · <a target=“_blank” href="">Github</a> · <a target=“_blank” href="">Live Project</a>
+            Portfolio · <a target=“_blank” href="https://github.com/aafonsobarbara/myportfolio">Github</a> · <a
+              target=“_blank” href="https://barbaraportfolio.netlify.app/">Live Project</a>
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
