--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/me.jpeg" alt="">
       </span>
     </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -57,7 +60,10 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Projects</a>
         </li>
+
+
       </ul>
+
     </div>
   </nav>
 
@@ -71,8 +77,9 @@
         <div class="subheading mb-5">Montes Claros, MG · +55 (38) 98845-6295 ·
           <a href="aafonsobarbara@gmail.com">aafonsobarbara@gmail.com</a>
         </div>
-        <p class="mb-5">I'm a Front-end Developer and UI Designer with experience in creating websites for over a
-          year.<br> I can create multiple websites in different styles using different tools and languages. I'm familiar
+        <p class="mb-5">I'm a Web Developer and UI Designer with experience in creating websites for over a
+          year.<br> I can create multiple websites in different styles using different tools and frameworks. I'm
+          familiar
           with Bootstrap and Scss and I'm constantly studying Javascript. In addition to creating websites, I can easily
           create some modern design, respecting the users usability and the customers request.
           <br> Even though I have knowledge in the area, I worked on it only as a freelancer. In my work experiences, I
@@ -230,7 +237,7 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Oz Baianos · <a target=“_blank” href="https://github.com/aafonsobarbara/Oz-Baianos">Github</a> · <a
-              target=“_blank” href="https://ozbaianos.netlify.app/">Live Project</a>
+              target=“_blank” href="http://ozbaianos.cf/">Live Project</a>
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
